Changes to stuff

--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-	
-	<head>
-		<title>Placeholder Title</title>
-	</head>
-	
-	<body>
-		<b>Oh hi, just globallizes the VM to be used in normal javascript, thats pretty much it.</b>
-	</body>
+  <head>
+    <title>Placeholder Title</title>
+  </head>
+
+  <body>
+    <div id="Player"></div>
+    <script src="gm2player.js?n=1"></script>
+    <script src="project.js?n=1"></script>
+  </body>
 </html>
